--- a/src/App.css
+++ b/src/App.css
@@ -34,4 +34,8 @@
 .aircrafts, .flights, .rotation {
   display: inline-block;
   vertical-align: top;
-}    
+}
+
+.flight-span {
+  margin-right: 30px;
+}
