--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,31 @@
   }
 }
 
-.aircrafts, .flights, .rotation {
+.aircrafts, .flights, .rotations {
   display: inline-block;
   vertical-align: top;
 }
 
 .flight-span {
   margin-right: 30px;
+}
+
+.rotation-span {
+  margin-left: 30px;
+}
+
+.rotation-arrival-span {
+  margin-left: 40px;
+}
+
+i {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
