Highlight flight when hovered

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,7 @@ i {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
 }
+
+.active {
+  background-color: rgb(134, 236, 194);
+}
