--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@ i {
   background-color: rgb(134, 236, 194);
 }
 
+.delete {
+  background-color: rgb(233, 138, 131);
+}
+
 .pointer {
   cursor: pointer;
 }
