--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,13 @@
   color: white;
 }
 
+.App-body {
+  background-color: #a2b3fc;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
